Fix HTML structure and add margin to header

--- a/inicial.html
+++ b/inicial.html
@@ -16,7 +16,7 @@
             <div class="col-md-6 offset-md-3">
                 <div class="card mt-5">
                     <div class="card-header text-center">
-                        <h2>Gerenciamento de Produtos</h2>
+                        <h2 style="margin-top: 15px;">Gerenciamento de Produtos</h2>
                     </div>
                     <div class="card-body">
                         <div class="d-grid gap-2">
